--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sulekha Style Layout</title>
+    <title>My Web Page</title>
     <style>
         body {
             margin: 0;
@@ -151,7 +151,7 @@
 
     <!-- Footer -->
     <div class="footer">
-        © 2025 Sulekha Clone | All Rights Reserved
+        © 2025 My Web page | All Rights Reserved
     </div>
 
 </body>
