--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <!-- Navbar -->
     <div class="navbar">
-        <div class="logo">Sulekha Clone</div>
+        <div class="logo">My Web page</div>
         <ul>
             <li>Home</li>
             <li>Services</li>
